@@ -13,6 +13,7 @@ Version 1.3.13+svn:
   * User interface
     * The apple key works as shortcut modifier again.
     * Made "Show lobby joins of friends only" the default preference.
+    * New menu option added to save replays manually.
 
   * Sound and music
     * The timer bell in MP starts when there are 20 seconds left and fades in
