@@ -35,7 +35,7 @@ enum HOTKEY_COMMAND {
 	HOTKEY_ZOOM_IN, HOTKEY_ZOOM_OUT, HOTKEY_ZOOM_DEFAULT,
 	HOTKEY_FULLSCREEN, HOTKEY_SCREENSHOT, HOTKEY_ACCELERATED,
 	HOTKEY_UNIT_DESCRIPTION, HOTKEY_RENAME_UNIT,
-	HOTKEY_SAVE_GAME, HOTKEY_SAVE_MAP, HOTKEY_LOAD_GAME,
+	HOTKEY_SAVE_GAME, HOTKEY_SAVE_REPLAY, HOTKEY_SAVE_MAP, HOTKEY_LOAD_GAME,
 	HOTKEY_RECRUIT, HOTKEY_REPEAT_RECRUIT, HOTKEY_RECALL, HOTKEY_ENDTURN,
 	HOTKEY_TOGGLE_GRID, HOTKEY_STATUS_TABLE, HOTKEY_MUTE, HOTKEY_MOUSE_SCROLL,
 	HOTKEY_SPEAK, HOTKEY_CREATE_UNIT, HOTKEY_CHANGE_UNIT_SIDE, HOTKEY_PREFERENCES,
@@ -182,6 +182,7 @@ public:
 	virtual void unit_description() {}
 	virtual void rename_unit() {}
 	virtual void save_game() {}
+	virtual void save_replay() {}
 	virtual void save_map() {}
 	virtual void load_game() {}
 	virtual void toggle_grid() {}
